# drf-practice

./: .dockerignore  .env.test  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  renovate.json  send_results.sh  set-up-env.test.sh  setup-ec2.sh  setup-rds.sh
.devcontainer/: devcontainer.json
.github/: docs.yml  labels.yml  release-drafter.yml
.github/actions/set-up-django/: action.yml
.github/actions/set-up-env/: action.yml
.github/actions/set-up-poetry/: action.yml
.github/workflows/: doc.yml  docs.yml  label-syncer.yml  labeler.yml  lint.yml  matrix.yml  release-drafter.yml  set-up-project.yml  setup-poetry.yml  test-actions-cache.yml  test-github-pages.yml  test-parallel.yml  test-service-container.yml  test.yml  use-custom-actions.yml  use-workflow-call.yml
allure-reports/latest/export/: influxDbData.txt
allure-results/: 01f9f24e-670a-47a5-aa81-3a0106dcfcaf-container.json  02f295b3-7917-47e9-8645-20f40d4134fe-container.json  03742489-acf9-404e-98ff-6e3c2e61d7f0-container.json  03bdd5ec-70d0-4f1e-b2ae-ae0866b8ad81-container.json  03ef6cdc-2de8-40f3-9aea-f6429ebf066e-container.json  04ef85ad-69cd-4aeb-b3b1-13f5c8c43179-result.json  0595a89d-7d5d-4d41-b3b1-f8759c8ade35-container.json  059c7cce-d252-448b-ba4b-3d562d2d6f13-container.json  05f6d215-f5d4-48f6-8dcd-d38d23a01afc-attachment.txt  06e7f4ae-389e-45a7-b36b-973328deb6f1-result.json  073ecac3-6f09-4802-9d89-60b78a719ad5-container.json  081f6174-4861-494c-b331-ec0c16e0700e-container.json  0888fa60-9956-4a44-9e93-6daf63a6d6bd-container.json  08a7e2f6-9228-4740-9655-36287601522b-container.json  0924c8b9-a873-472d-a681-11c76225dbc5-container.json  09bdc645-33be-490f-9444-dabaa0b2f2dd-result.json  0a9dcc52-dc35-4533-a2b4-0d4db178b606-container.json  0aaa3430-2354-4a15-b51f-428ac9ef7467-container.json  0c4c48c8-12ed-4195-ac2c-ded31c26deb6-container.json  0c921a43-1992-4392-854f-d19da554d950-container.json  0cb965a6-6219-4265-aa57-5a508e63008c-container.json  0d2284e4-c493-41bd-89ac-2cd23c336615-container.json  0fb91d71-3356-43ee-a463-eb9b2dfd861b-container.json  0feddfb9-5b26-4602-b6a4-4649157186e8-container.json  102aa843-8551-4546-9754-24a3f037bd38-result.json  103eba71-d1b4-4963-b29d-d452a9e9f1fd-container.json  10aea293-7df2-42e0-b4c4-cafe4ff7d25b-container.json  10e9b519-7169-4e12-bf5e-d9639fb4f59c-result.json  1192b64d-bb8a-4478-8364-2f81c4f07875-attachment.txt  127221e9-bdcf-44c8-92fa-8f2b28c5fbd0-container.json  1344f94c-f6ba-4140-823d-893a71f6833d-container.json  13d499b5-aa1f-40ff-8999-407f12745727-container.json  15d7cfb8-1a61-4142-9256-0ed901c988db-container.json  168ae804-e11b-424c-9e72-99ce763f69d4-container.json  16a0225b-99b6-47f9-b516-561d9d1b83a7-attachment.txt  18257415-bb87-481d-b86b-625c97644b5d-container.json  183339c4-ed46-4706-8220-85fe33246f1d-container.json  188e698e-d542-40ff-a0c3-e905759ba05e-container.json  19225b8e-d11d-414b-b17c-dc338b6f0b2d-container.json  1c70014f-7c6f-4288-afe9-e5b5e18f7047-container.json  (+244 more)
application/: models.py  permissions.py  pyproject.toml  serializers.py  urls.py  views.py
application/application/: __init__.py  celery.py  emails.py  filters.py  injectors.py  permissions.py  serializers.py  tasks.py  urls.py
application/application/fixtures/: fixture.json
application/application/models/: __init__.py  customer.py  user.py
application/application/serializers/: customer.py  sms.py  user.py
application/application/tests/: __init__.py  common_method.py  conftest.py  test_health_check_feature.py  test_login.py  test_login_feature.py
application/application/tests/factories/: address.py  customer.py  user.py
application/application/tests/features/: health_check.feature  login.feature
application/application/tests/models/: test_customer.py  test_user.py
application/application/tests/serializers/: test_customer.py  test_user.py
application/application/tests/views/: test_health_check.py  test_health_check_feature.py  test_login_feature.py  test_user.py
application/application/utils/: customer_storage.py  get_client_ip.py  logs.py  password_validator.py  sms.py
application/application/views/: customer.py  health_check.py  login.py  sms.py  user.py
application/project/: asgi.py  settings.py  wsgi.py
application/project/settings/: base.py  dev.py  environment.py  local.py  stg.py
application/project/urls/: base.py  dev.py
application/tests/: common_method.py  conftest.py  test_email.py  test_health_check.py  test_login.py
application/tests/mail/: test_email.py
application/tests/models/: test_user.py
application/views/: health_check.py  login.py  user.py
containers/django/: Dockerfile  Dockerfile.dev  Dockerfile.prd  Dockerfile.stg  entrypoint.sh
containers/mysql/: Dockerfile  init.sql  my.cnf
containers/nginx/: Dockerfile
containers/nginx/conf.d/: default.conf
project/: settings.py  urls.py
