[tool.poetry]
name = "api"
version = "0.1.0"
description = "api"
authors = ["shun198 <shunhiroseluvmri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-extensions = "^3.2.1"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.24.2"
mysqlclient = "^2.1.1"
gunicorn = "^20.1.0"
drf-nested-routers = "^0.93.4"
celery = "^5.2.7"
django-celery-beat = "^2.4.0"
redis = "^4.3.4"
black = "^22.10.0"
django-cors-headers = "^3.13.0"
Authlib = "^1.1.0"
django-filter = "^22.1"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-sugar = "^0.9.6"
pytest-xdist = "^3.0.2"
django-debug-toolbar = "^3.8.1"
pytest-custom-exit-code = "^0.3.0"
allure-pytest = "^2.12.0"
boto3 = "^1.26.22"
django-ses = "^3.2.2"
django-storages = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
